--- a/kvadrobery/index.html
+++ b/kvadrobery/index.html
@@ -13,8 +13,6 @@
     </head>
     <body>
         <div class="wrapper">
-
-            <!-- SIDEBAR -->
             <aside class="sidebar">
                 <img src="assets/images/logo.png" alt="Логотип wiki" width="150px">
                 
@@ -40,7 +38,64 @@
             </aside>
 
             <main>
+                <section>
+                    <div class="section-title">
+                        <p>Квадроберы</p>
+                    </div>
 
+                    <div class="container-info">
+                        <div class="text-info">
+                            <p class="p-text">
+                                Квадроберы (англ. quadrobists, реже англ. quadrobers, термин происходит от соединения лат. 
+                                quattuor — четыре и англ. aerobics — аэробика[1][2]; общеупотребительным является название 
+                                людей, занимающихся данными упражнениями, — квадроберы, средствами массовой информации в 
+                                равном соотношении по отношению друг к другу для обозначения самого явления используются 
+                                термины квадробика и квадробинг, в англоязычной научной литературе — англ. quadrupedal 
+                                movement training (QMT)[3], в англоязычной прессе — англ. quadrobics) — люди, преимущественно 
+                                подростки, занимающиеся имитацией действий и повадок животных. В разных печатных изданиях такая 
+                                имитация воспринимается как субкультура и / или особый неофициальный вид спорта
+                            </p>
+
+                            <p class="p-text">
+                                Интерес к квадроберам в России стимулировал бизнес начать производство товаров для них. Среди товаров, 
+                                продаваемых на маркетплейсах: ароматы для и против квадроберов, атрибутика из искусственного меха, корм, 
+                                наборы масок для самостоятельной раскраски. В начале октября 2024 года резко увеличилось общее производство 
+                                данной продукции. В качестве товаров для субкультуры стала рекламироваться даже продукция, не имеющая к ней 
+                                никакого отношения
+                            </p>
+
+                            <p class="p-text">
+                                Квадроберы вызвали острую дискуссию в структурах высшей законодательной власти в России. В ней приняли 
+                                участие депутаты и сенаторы из обеих палат Федерального собрания. Спектр мнений, высказанных в спорах, 
+                                простирается от требования запрета и законодательного регулирования до пожеланий не привлекать повышенное 
+                                внимание к проблеме, которая не получила широкого распространения среди подростков и не играет серьёзной роли 
+                                в «судьбе Отечества»Перейти к разделу «Возможность запрета квадробики в России». К дискуссии подключились философы, 
+                                профессиональные психологи и психиатры, юристы, высокопоставленный сотрудник Московского патриархата, а также звёзды 
+                                шоу-бизнесаПерейти к разделу «Квадробика как субкультура». Министр иностранных дел России Сергей Лавров обсуждал тему 
+                                квадроберов на встрече 8 октября 2024 года с министром иностранных дел Армении Араратом Мирзояном. Пресс-секретарь 
+                                президента России Дмитрий Песков в интервью корреспонденту РИА Новости, задавшему ему вопрос о квадроберах, ответил, 
+                                что «движение квадроберов является „полной ерундой“»
+                            </p>
+
+                            <p class="p-text">
+                                В западной научной периодике (среди таких изданий «Frontiers in Sports and Active Living», «Journal of Strength 
+                                and Conditioning Research», «Human Movement Science» и другие) появился ряд статей, анализирующих влияние занятий 
+                                фитнес-вариантом квадробики (QMT) на человеческий организм. Эксперименты проводились на студентах вузов и выявили 
+                                в целом положительное влияние на организм человека в целом, его отдельные элементы и даже на когнитивные способности
+                            </p>
+                        </div>
+
+                        <div class="card-info">
+                            <div class="c-title">
+                                <p>Квадроберы</p>
+                            </div>
+
+                            <img src="assets/images/Quadrober_on_the_pillow.jpg"
+                            alt="Девочка квадробер"
+                            width="300">
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
     </body>
