--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link rel="stylesheet" type="text/css" href="assets/css/sidebar.css">
         <title>Квадроберь - пародия</title>
@@ -211,5 +210,29 @@
                 </section>
             </main>
         </div>
+
+        <footer>
+            <div class="container">
+                <p class="p-text">
+                    Эта страница в последний раз была отредактирована 13 октября 2024.
+                </p>
+
+                <p class="p-text">
+                    Текст доступен по лицензии Creative Commons «С указанием авторства — С сохранением условий» (CC BY-SA); в отдельных случаях могут 
+                    действовать дополнительные условия. Подробнее см. Условия использования.<br>
+                    Wikipedia® — зарегистрированный товарный знак некоммерческой организации «Фонд Викимедиа» (Wikimedia Foundation, Inc.)
+                </p>
+
+                <div class="footer-nav">
+                    <a href="#">Политика конфиденциальности</a>
+                    <a href="#">Описание Википедии</a>
+                    <a href="#">Отказ от ответственности</a>
+                    <a href="#">Свяжитесь с нами</a>
+                    <a href="#">Кодекс поведения</a>
+                    <a href="#">Разработчики</a>
+                    <a href="#">Статистика</a>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
